# GC-Lab4-FlatShading

./: CMakeLists.txt  Color.h  Fragment.h  Print.h  README.md  Shaders.h  Triangle.h  Vertices.h  main.cpp
